// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListRow renders  a row with index and item and delete button 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={6}
      xs={5}
    >
      <GenericTemplate
        item="one"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      md={2}
      sm={5}
      xs={5}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        justify="flex-end"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove this item"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <DeleteIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRow renders  a row with index and item set, renders reorder buttons, and delete button 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={6}
      xs={5}
    >
      <GenericTemplate
        item="one"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      md={2}
      sm={5}
      xs={5}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        justify="flex-end"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <WithStyles(ForwardRef(Tooltip))
            title="Move item up the order"
          >
            <WithStyles(ForwardRef(IconButton))
              disabled={false}
              onClick={[Function]}
            >
              <KeyboardArrowUpIcon />
            </WithStyles(ForwardRef(IconButton))>
          </WithStyles(ForwardRef(Tooltip))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <WithStyles(ForwardRef(Tooltip))
            title="Move item down the order"
          >
            <WithStyles(ForwardRef(IconButton))
              disabled={false}
              onClick={[Function]}
            >
              <KeyboardArrowDownIcon />
            </WithStyles(ForwardRef(IconButton))>
          </WithStyles(ForwardRef(Tooltip))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove this item"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <DeleteIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRow renders  should delete row on confirmation 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={11}
      sm={11}
      xs={10}
    >
      <GenericTemplate
        item="one"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove this item"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <DeleteIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRow renders  should move row down 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={6}
      xs={5}
    >
      <GenericTemplate
        item="one"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      md={2}
      sm={5}
      xs={5}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        justify="flex-end"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <WithStyles(ForwardRef(Tooltip))
            title="Move item down the order"
          >
            <WithStyles(ForwardRef(IconButton))
              disabled={false}
              onClick={[Function]}
            >
              <KeyboardArrowDownIcon />
            </WithStyles(ForwardRef(IconButton))>
          </WithStyles(ForwardRef(Tooltip))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove this item"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <DeleteIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRow renders  should move row up 1`] = `
<div
  className="ListRow-Form ListRow-Form-one"
  style={
    Object {
      "flexGrow": 1,
      "padding": 8,
    }
  }
>
  <WithStyles(ConfirmDialogBox)
    hideCancelButton={false}
    locale={
      Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      }
    }
    onAction={[Function]}
    onRef={[Function]}
    showAlternateActionButton={false}
  />
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    container={true}
    spacing={1}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={9}
      sm={6}
      xs={5}
    >
      <GenericTemplate
        item="one"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      md={2}
      sm={5}
      xs={5}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
        justify="flex-end"
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
        >
          <WithStyles(ForwardRef(Tooltip))
            title="Move item up the order"
          >
            <WithStyles(ForwardRef(IconButton))
              disabled={false}
              onClick={[Function]}
            >
              <KeyboardArrowUpIcon />
            </WithStyles(ForwardRef(IconButton))>
          </WithStyles(ForwardRef(Tooltip))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      className="center"
      item={true}
      sm={1}
      xs={2}
    >
      <WithStyles(ForwardRef(Tooltip))
        title="Remove this item"
      >
        <WithStyles(ForwardRef(IconButton))
          disabled={false}
          id="delete-0"
          onClick={[Function]}
        >
          <DeleteIcon />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(Tooltip))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</div>
`;

exports[`ListRow renders  should render default view with styles 1`] = `
<ListRow
  classes={
    Object {
      "center": "ListRow-center-1",
      "row": "ListRow-row-2",
    }
  }
  form="Form"
  index={0}
  item="one"
  itemTemplate={[Function]}
  locale={
    Object {
      "deleteHint": "Remove this item",
      "deleteRecordConfirmation": Object {
        "cancelButtonLabel": "No",
        "confirmButtonLabel": "Yes",
        "confirmationMessage": "Are you sure you want to delete this item?",
        "confirmationTitle": "Delete item",
      },
      "editHint": "Edit this item",
      "moveDownHint": "Move item down the order",
      "moveUpHint": "Move item up the order",
    }
  }
/>
`;

exports[`ListRow renders  should render edit button 1`] = `ShallowWrapper {}`;
